fixed overlapping form and footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -226,7 +226,7 @@ body {
 .main {
   background-color: var(--color-grey-light-1);
   padding: 8rem 6rem;
-  height: 73vh;
+  height: 85vh;
 }
 
 .main--account {
@@ -234,7 +234,7 @@ body {
   padding: 4rem 6rem;
 }
 .form-box {
-  margin: 3.5rem auto 2 auto;
+  margin: 3.5rem auto 2rem auto;
   max-width: 45rem;
   background-color: #fff;
   box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.06);
